2008-09-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.147

	* Fixed a show-stopping brown-paper-bag bug in the GUI.

2008-09-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.146

	* Various small fixes to prepare for release.

2008-08-29  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.144

	* Added undo/redo to the GUI.

2008-08-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.142

	* Another pattern matching bugfix for cases of the type

	   A^{\mu} B^{\nu};
           @substitute!(%)( A?^{\sigma} A?^{\rho} -> Q^{\sigma\rho} );


	* Fixed a bug in tree.hh which would sometimes lead to a failure
	when acting with an algorithm at fixed depth.

	* Streamlined the pattern matching engine, removing along the way
	a bug which would misbehave with

	    X Y + Z Z
	    @substitute!(%)( A? A? -> Q );

	* Made property initialisation produce proper error messages
	instead of just textual output.

2008-08-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.141

	* Fixed a bug in the main loop related to handling of multipliers.

	* Fixed a bug in @substitute which would touch the tree above the
	entry point, thereby disabling clean-up routines. 

2008-08-07  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug in the GUI which would corrupt the notebook upon
	removing the last cell.

2008-07-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Started adding @factor_out (not yet completed).

2008-07-19  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* One last scrolling bug fixed...

2008-07-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made some changes to @substitute so that \hasprop can be applied
	to more general patterns. Added some documentation to the pattern
	section to explain this.

	* Changed \div to \frac (though this will eventually go away
	altogether). 

2008-07-16  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed scrolling behaviour of the GUI once more...
