@@ -1,8 +1,7 @@
 \cdbalgorithm{factor\_out}{}
 
 Given a list of symbols, this algorithm tried to factor those symbols
-out of terms. As an
-example,
+out of terms. As an example,
 \begin{screen}{1,2}
 a b + a c e + a d:
 @factor_out!(%){a};
