@@ -1,0 +1,11 @@
+http://www.codeproject.com/KB/architecture/composite_visitor.aspx
+
+"Separately, and the subject topic remains appropriate, I wonder if
+Kasper Peeters could be persuaded to revise the licence terms of his
+stl-like tree, which he is still maintaining - at the Max Planck
+institute no less. I used to code commercially and feel it is a pity
+if academics restrict their work to, essentially, other academics,
+especially if they are in part supported by income tax."
+
+Dafydd, 18-feb-2006
+
