@@ -185,7 +185,7 @@
 \pagestyle{empty}
 \begin{flushright}
 original: July 2006\\
-this version: August 22nd, 2008\\
+this version: October 3rd, 2008\\
 AEI-2006-038
 \end{flushright}
 \vspace{6ex}
@@ -2539,7 +2539,8 @@ distributing products over sums and similar algorithms. It recognises
 \input{algorithms/prodsort.tex}
 \input{algorithms/collect_factors.tex}
 \input{algorithms/collect_terms.tex}
-\input{algorithms/factorise.tex}
+\input{algorithms/factor_out.tex}
+\input{algorithms/factor_in.tex}
 \input{algorithms/canonicalise.tex}
 \input{algorithms/reduce.tex}
 \input{algorithms/young_project.tex}
