@@ -109,6 +109,8 @@ href="http://www.gnu.org/software/gnash/">Gnash</a></strong></dt>
 possible to play flash movies with proprietary software. While there
 are some other free flash players, none support anything beyond SWF
 v4. Gnash is based on GameSWF, and supports many SWF v7 features.</dd>
+<dt><strong><a href="http://www.cs.sfu.ca/~anoop/courses/CMPT-379-Fall-2007/index.html">Principles of Compiler Design</a></strong></dt>
+<dd>A course in compiler design at the Simon Fraser University, Canada.</dd>
 <dt><strong><a href="http://sourceforge.net/projects/liborigin/">liborigin</a></strong></dt>
 <dd>A library for reading OriginLab OPJ project files, which is used
   by <a href="http://soft.proindependent.com/qtiplot.html">QtiPlot</a>
@@ -254,14 +256,25 @@ iterators (all intervals are as usual closed at the beginning and open
 at the end).</div>
 
 <hr noshade size=1>
-<p align=right><!-- Begin Nedstat Basic code -->
-<!-- Title: tree.hh stl-like container class -->
-<!-- URL: http://www.aei.mpg.de/~peekas/tree/ -->
-<a target="_blank" href="http://www.nedstatbasic.net/stats?ACQzpQ2TGcFmLelb10QwJ0nRa7UQ"><img
-src="http://m1.nedstatbasic.net/n?id=ACQzpQ2TGcFmLelb10QwJ0nRa7UQ"
-border="0" width="18" height="18"
-alt="Webstats4U - Free web site statistics
-Personal homepage website counter"></a>
-<!-- End Nedstat Basic code --> $Id: tree.html,v 1.64 2008/04/05 18:23:00 peekas Exp $
+<p align=right><small>
+<!-- Start of StatCounter Code -->
+<script type="text/javascript">
+var sc_project=4068217; 
+var sc_invisible=0; 
+var sc_partition=50; 
+var sc_click_stat=1; 
+var sc_security="3f2419f9"; 
+var sc_text=1; 
+</script>
+
+<script type="text/javascript"
+		  src="http://www.statcounter.com/counter/counter.js"></script><noscript><div class="statcounter"><a title="free
+		  hit counter"
+		  href="http://www.statcounter.com/free_hit_counter.html"
+		  target="_blank"><img class="statcounter"
+		  src="http://c.statcounter.com/4068217/0/3f2419f9/0/" alt="free
+		  hit counter" ></a></div></noscript>
+<!-- End of StatCounter Code -->
+ visitors so far</small>
 </body>
 </html>
