@@ -1,3 +1,7 @@
+2008-10-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Added window icons.
+
 2008-09-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Released 0.147
